--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
           <div class="col-lg-8 content">
             <h2>Automation &amp; Cloud Architect.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Cloud | Devops | Automation specialist
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -143,8 +142,7 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Experienced Automation and Cloud DevOps professional with 13 years of expertise in designing and implementing robust automation frameworks, CI/CD pipelines, and cloud infrastructure. Skilled in Selenium, Pytest, Terraform, Jenkins, Docker, Kubernetes, AWS, and Azure. Proven ability to drive efficiency, scalability, and system reliability.
             </p>
           </div>
         </div>
