--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://maps.app.goo.gl/aWZXkfK6zGaJzEvJA" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/place/Hari+Hara+Hills/@17.5214218,78.3857483,17z/data=!3m1!4b1!4m6!3m5!1s0x3bcb8f86a4c157c7:0xcb45a223867bfbcd!8m2!3d17.5214218!4d78.3857483!16s%2Fg%2F11sh738yhz?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
