--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Experienced Automation and Cloud DevOps professional with 13 years of expertise in designing and implementing robust automation frameworks, CI/CD pipelines, and cloud infrastructure. Skilled in Selenium, Pytest, Terraform, Jenkins, Docker, Kubernetes, AWS, and Azure. Proven ability to drive efficiency, scalability, and system reliability.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -281,28 +281,26 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Shiva Krishna Duppalli</h4>
+              <p><em>Innovative and deadline-driven Architect with 13 years of experience in Automation and Cloud tools</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Hari Hara Hills,Hyderabad, IN</li>
+                <li>+91 9000501030</li>
+                <li>shiva.duppalli@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>MASTER OF TECHNOLOGY IN &amp; COMPUTER SCIENCE AND ENGINEERING(CSE)</h4>
+              <h5>2011 - 2013</h5>
+              <p><em>Jawaharlal Nehru Technological University, Hyderabad, IN</em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>BACHELOR OF TECHNOLOGY IN &amp; INFORMATION TECHNOLOGY </h4>
+              <h5>2006 - 2010</h5>
+              <p><em>Jawaharlal Nehru Technological University, Hyderabad, IN</em></p>
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -310,14 +308,20 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>ARCHITECT</h4>
+              <h5>2024 - Present</h5>
+              <p><em>BOSCH GLOBAL SOFTWARE, HYDERABAD, IN </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Responsible for developing the performance testing framework from scratch.</li>
+                <li>Creating the Test Strategy document for performance testing of PJGTR Application.</li>
+                <li>Performance test automation of Apache Airflow using Locust.</li>
+                <li>Containerization of the performance test suite using Docker.</li>
+                <li>Setting up CI/CD pipelines using Azure Pipelines.</li>
+                <li>Validating the Terraform Modules to ensure infrastructure is created successfully.</li>
+                <li>Developing Python-based utilities to reduce manual efforts and speed up processes.</li>
+                <li>Infrastructure testing of Azure cloud-managed services using Python and Pytest.</li>
+                <li>Creating Test Strategy document for Infrastructure Testing.</li>
+                <li>Developing Infrastructure Automation Framework from scratch.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
