--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>MASTER OF TECHNOLOGY IN &amp; COMPUTER SCIENCE AND ENGINEERING(CSE)</h4>
+              <h4>MASTER OF TECHNOLOGY IN COMPUTER SCIENCE AND ENGINEERING(CSE)</h4>
               <h5>2011 - 2013</h5>
               <p><em>Jawaharlal Nehru Technological University, Hyderabad, IN</em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>BACHELOR OF TECHNOLOGY IN &amp; INFORMATION TECHNOLOGY </h4>
+              <h4>BACHELOR OF TECHNOLOGY IN INFORMATION TECHNOLOGY </h4>
               <h5>2006 - 2010</h5>
               <p><em>Jawaharlal Nehru Technological University, Hyderabad, IN</em></p>
             </div><!-- Edn Resume Item -->
@@ -326,15 +326,108 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>SENIOR TEST LEAD</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+             <ul>
+              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
+              <li>Testing REST API endpoints using Postman Automation Tool.</li>
+              <li>Validating backend data using DBeaver Database Management Tool.</li>
+              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
+              <li>Setting up CI/CD pipeline using GitLab.</li>
+              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
+              <li>Controlling source code using GIT version control system.</li>
+            </ul>
+            </div><!-- Edn Resume Item -->
+          
+            <div class="resume-item">
+              <h4>SENIOR TEST LEAD</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+             <ul>
+              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
+              <li>Testing REST API endpoints using Postman Automation Tool.</li>
+              <li>Validating backend data using DBeaver Database Management Tool.</li>
+              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
+              <li>Setting up CI/CD pipeline using GitLab.</li>
+              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
+              <li>Controlling source code using GIT version control system.</li>
+            </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>SENIOR TEST LEAD</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+             <ul>
+              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
+              <li>Testing REST API endpoints using Postman Automation Tool.</li>
+              <li>Validating backend data using DBeaver Database Management Tool.</li>
+              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
+              <li>Setting up CI/CD pipeline using GitLab.</li>
+              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
+              <li>Controlling source code using GIT version control system.</li>
+            </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>SENIOR TEST LEAD</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+             <ul>
+              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
+              <li>Testing REST API endpoints using Postman Automation Tool.</li>
+              <li>Validating backend data using DBeaver Database Management Tool.</li>
+              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
+              <li>Setting up CI/CD pipeline using GitLab.</li>
+              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
+              <li>Controlling source code using GIT version control system.</li>
+            </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>SENIOR TEST LEAD</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+             <ul>
+              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
+              <li>Testing REST API endpoints using Postman Automation Tool.</li>
+              <li>Validating backend data using DBeaver Database Management Tool.</li>
+              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
+              <li>Setting up CI/CD pipeline using GitLab.</li>
+              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
+              <li>Controlling source code using GIT version control system.</li>
+            </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>SENIOR TEST LEAD</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+             <ul>
+              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
+              <li>Testing REST API endpoints using Postman Automation Tool.</li>
+              <li>Validating backend data using DBeaver Database Management Tool.</li>
+              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
+              <li>Setting up CI/CD pipeline using GitLab.</li>
+              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
+              <li>Controlling source code using GIT version control system.</li>
+            </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>SENIOR TEST LEAD</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+             <ul>
+              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
+              <li>Testing REST API endpoints using Postman Automation Tool.</li>
+              <li>Validating backend data using DBeaver Database Management Tool.</li>
+              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
+              <li>Setting up CI/CD pipeline using GitLab.</li>
+              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
+              <li>Controlling source code using GIT version control system.</li>
+            </ul>
             </div><!-- Edn Resume Item -->
 
           </div>
