modified the contact details form

--- a/index.html
+++ b/index.html
@@ -341,18 +341,10 @@
             </div><!-- Edn Resume Item -->
           
             <div class="resume-item">
-              <h4>SENIOR TEST LEAD</h4>
-              <h5>2022 - 2024</h5>
-              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
-             <ul>
-              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
-              <li>Testing REST API endpoints using Postman Automation Tool.</li>
-              <li>Validating backend data using DBeaver Database Management Tool.</li>
-              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
-              <li>Setting up CI/CD pipeline using GitLab.</li>
-              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
-              <li>Controlling source code using GIT version control system.</li>
-            </ul>
+              <h4>SENIOR SOFTWARE QA ENGINEER</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>ORACLE INDIA PRIVATE LIMITED, HYDERABAD, IN</em></p>
+              <p>Responsible for development of automation framework using Selenium WebDriver with Java. Setting up Oracle Virtual Machine instance to execute the automation test cases. Integrating GIT repositories with Oracle Developer Cloud Service (DevCS). Containerizing the automation framework with necessary dependencies and pushing it to Oracle Cloud Registry. Setting up the pipelines in Oracle Developer Cloud Service to use the above image as an execution environment. Monitoring resource consumption using OCI monitoring and logging tools.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
