modified the contact details form

--- a/index.html
+++ b/index.html
@@ -344,82 +344,91 @@
               <h4>SENIOR SOFTWARE QA ENGINEER</h4>
               <h5>2021 - 2022</h5>
               <p><em>ORACLE INDIA PRIVATE LIMITED, HYDERABAD, IN</em></p>
-              <p>Responsible for development of automation framework using Selenium WebDriver with Java. Setting up Oracle Virtual Machine instance to execute the automation test cases. Integrating GIT repositories with Oracle Developer Cloud Service (DevCS). Containerizing the automation framework with necessary dependencies and pushing it to Oracle Cloud Registry. Setting up the pipelines in Oracle Developer Cloud Service to use the above image as an execution environment. Monitoring resource consumption using OCI monitoring and logging tools.</p>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>SENIOR TEST LEAD</h4>
-              <h5>2022 - 2024</h5>
-              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
              <ul>
-              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
-              <li>Testing REST API endpoints using Postman Automation Tool.</li>
-              <li>Validating backend data using DBeaver Database Management Tool.</li>
-              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
-              <li>Setting up CI/CD pipeline using GitLab.</li>
-              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
-              <li>Controlling source code using GIT version control system.</li>
+              <li>Responsible for development of automation framework using Selenium WebDriver with Java.</li>
+              <li>Setting up Oracle Virtual Machine instance to execute the automation test cases.</li>
+              <li>Integrating GIT repositories with Oracle Developer Cloud Service (DevCS).</li>
+              <li>Containerizing the automation framework with necessary dependencies and pushing it to Oracle Cloud Registry.</li>
+              <li>Setting up the pipelines in Oracle Developer Cloud Service to use the above image as an execution environment.</li>
+              <li>Monitoring resource consumption using OCI monitoring and logging tools.</li>
             </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>SENIOR TEST LEAD</h4>
-              <h5>2022 - 2024</h5>
-              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+              <h4>SENIOR SOFTWARE TEST ENGINEER</h4>
+              <h5>2018 - 2021</h5>
+              <p><em>NCR CORPORATION, HYDERABAD, IN</em></p>
              <ul>
-              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
-              <li>Testing REST API endpoints using Postman Automation Tool.</li>
-              <li>Validating backend data using DBeaver Database Management Tool.</li>
-              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
-              <li>Setting up CI/CD pipeline using GitLab.</li>
-              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
-              <li>Controlling source code using GIT version control system.</li>
+              <li>Creating automation framework from scratch and executing it using AWS Cloud Managed Services.</li>
+              <li>Setting up AWS Cloud EC2 instance and configuring it to run the framework suite.</li>
+              <li>Responsible for migration of existing GitHub repository into AWS CodeCommit.</li>
+              <li>Integrating AWS CodeCommit with AWS CodePipeline post migration to seamlessly execute the automation suite.</li>
+              <li>Migration of existing Docker images to AWS ECS (Elastic Container Service).</li>
+              <li>Configuring AWS CodePipeline with necessary stages and executing at regular intervals.</li>
+              <li>Monitoring and logging using AWS CloudWatch and Logging.</li>
             </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>SENIOR TEST LEAD</h4>
-              <h5>2022 - 2024</h5>
-              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+              <h4>QA SPECIALIST</h4>
+              <h5>2017 - 2018</h5>
+              <p><em>ORACLE INDIA PRIVATE LIMITED, HYDERABAD, IN</em></p>
              <ul>
-              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
-              <li>Testing REST API endpoints using Postman Automation Tool.</li>
-              <li>Validating backend data using DBeaver Database Management Tool.</li>
-              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
-              <li>Setting up CI/CD pipeline using GitLab.</li>
-              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
-              <li>Controlling source code using GIT version control system.</li>
+              <li>Responsible for development of automation framework using Selenium WebDriver with Java.</li>
+              <li>Setting up Oracle Virtual Machine instance to execute the automation test cases.</li>
+              <li>Integrating GIT repositories with Oracle Developer Cloud Service (DevCS).</li>
+              <li>Containerizing the automation framework with necessary dependencies and pushing it to Oracle Cloud Registry.</li>
+              <li>Setting up the pipelines in Oracle Developer Cloud Service to use the above image as an execution environment.</li>
+              <li>Monitoring resource consumption using OCI monitoring and logging tools.</li>
             </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>SENIOR TEST LEAD</h4>
-              <h5>2022 - 2024</h5>
+              <h4>LEAD ENGINEER</h4>
+              <h5>2015 - 2017</h5>
               <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
              <ul>
-              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
-              <li>Testing REST API endpoints using Postman Automation Tool.</li>
-              <li>Validating backend data using DBeaver Database Management Tool.</li>
-              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
-              <li>Setting up CI/CD pipeline using GitLab.</li>
-              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
-              <li>Controlling source code using GIT version control system.</li>
+              <li>Responsible for development of automation framework using Selenium WebDriver.</li>
+              <li>Dependency management using Maven build tool.</li>
+              <li>Containerization of the automation framework using Docker.</li>
+              <li>Setting up Jenkins to execute the automation scripts at regular intervals.</li>
+              <li>Sending daily execution reports to stakeholders and fixing issues.</li>
+              <li>Monitoring using Nagios monitoring tool.</li>
+              <li>Sending execution status alerts to Slack.</li>
             </ul>
+
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>SENIOR TEST LEAD</h4>
-              <h5>2022 - 2024</h5>
-              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+              <h4>SOFTWARE TEST ENGINEER</h4>
+              <h5>2015 - 2015</h5>
+              <p><em>VISHIST BUSINESS SOLUTION PVT LIMITED, HYDERABAD, IN</em></p>
+              <ul>
+                <li>Responsible for development of automation framework using Selenium WebDriver.</li>
+                <li>Dependency management using Maven build tool.</li>
+                <li>Migrating the existing code from GIT to Azure Repos.</li>
+                <li>Containerization of the automation framework using Docker.</li>
+                <li>Setting up the automation framework using Azure Pipeline.</li>
+                <li>Generating Azure Artifacts from the pipeline execution.</li>
+              </ul>
+
+
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>AUTOMATION TEST ENGINEER</h4>
+              <h5>2012 - 2015</h5>
+              <p><em>ETS TECHNOLOGIES, HYDERABAD, IN</em></p>
              <ul>
-              <li>Responsible for development of automation framework from scratch using Kevlar Automation Tool.</li>
-              <li>Testing REST API endpoints using Postman Automation Tool.</li>
-              <li>Validating backend data using DBeaver Database Management Tool.</li>
-              <li>Creating UI automation scripts using WebdriverIO Mocha framework with Chai assertions.</li>
-              <li>Setting up CI/CD pipeline using GitLab.</li>
-              <li>Containerizing Node.js-based WebdriverIO and executing it frequently.</li>
-              <li>Controlling source code using GIT version control system.</li>
+              <li>Responsible for development of automation framework using Selenium WebDriver.</li>
+              <li>Dependency management using Maven build tool.</li>
+              <li>Migrating the existing code from GIT to Azure Repos.</li>
+              <li>Containerization of the automation framework using Docker.</li>
+              <li>Setting up the automation framework using the Azure Pipeline.</li>
+              <li>Generating Azure Artifacts from the pipeline execution.</li>
             </ul>
+
+
             </div><!-- Edn Resume Item -->
 
           </div>
