modified the contact details form

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <div class="resume-item">
               <h4>LEAD ENGINEER</h4>
               <h5>2015 - 2017</h5>
-              <p><em>HCL TECHNOLOGIES LIMITED, HYDERABAD, IN</em></p>
+              <p><em>HCL TECHNOLOGIES LIMITED, CHENNAI, IN</em></p>
              <ul>
               <li>Responsible for development of automation framework using Selenium WebDriver.</li>
               <li>Dependency management using Maven build tool.</li>
@@ -418,7 +418,7 @@
             <div class="resume-item">
               <h4>AUTOMATION TEST ENGINEER</h4>
               <h5>2012 - 2015</h5>
-              <p><em>ETS TECHNOLOGIES, HYDERABAD, IN</em></p>
+              <p><em>ETS TECHNOLOGIES, BENGULURU, IN</em></p>
              <ul>
               <li>Responsible for development of automation framework using Selenium WebDriver.</li>
               <li>Dependency management using Maven build tool.</li>
