modified the contact details form

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
-            <li><a href="#">Dropdown 1</a></li>
+            <li><a href="https://github.com/shivatechhub">GitHub</a></li>
             <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Deep Dropdown 1</a></li>
@@ -814,7 +814,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>Hari Hara Hills , Banday Layout, Nizampet, Hyderabad - 500090</p>
+                  <p>Hyderabad - 500090</p>
                 </div>
               </div><!-- End Info Item -->
 
