modified the contact details form

--- a/index.html
+++ b/index.html
@@ -642,13 +642,9 @@
 
           <!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat tarad limino ata</p>
-            </div>
+          <div style="text-align: center; width: 200px; margin: 10px;">
+            <img src="images/azure.png" alt="Azure" style="width: 100px; height: auto; border-radius: 8px;">
+            <p style="margin-top: 8px; font-size: 14px;">Azure</p>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
