--- a/index.html
+++ b/index.html
@@ -636,60 +636,53 @@
 
         <div class="row gy-4">
 
-          <div style="text-align: center; width: 200px; margin: 10px;">
-            <img src="images/ado.png" alt="Azure Devops" style="width: 100px; height: auto; border-radius: 8px;">
-            <p style="margin-top: 8px; font-size: 14px;">Azure Devops</p>
+          <div style="display: flex; justify-content: center; gap: 20px;">
+            <div style="text-align: center; width: 200px;">
+              <img src="images/ado.png" alt="Azure Devops" style="width: 100px; height: auto; border-radius: 8px;">
+              <p style="margin-top: 8px; font-size: 14px;">ADO</p>
+            </div>
+
+            <div style="text-align: center; width: 200px;">
+              <img src="images/azure.png" alt="Azure Devops" style="width: 100px; height: auto; border-radius: 8px;">
+              <p style="margin-top: 8px; font-size: 14px;">Azure</p>
+            </div>
           </div>
 
-          <!-- End Service Item -->
 
-          <!-- service 2 -->
-          <div class="service">
-            <img src="images/azure.png" alt="Azure DevOps icon">
-            <div class="service-name">Azure</div>
-            <!-- <div class="service-bar">
-                          <span style="width: 90%;"></span>
-                      </div> -->
-          </div>
-        </div><!-- End Service Item -->
+          <div style="text-align: center; width: 200px;">
+              <img src="images/github.png" alt="GitHub" style="width: 100px; height: auto; border-radius: 8px;">
+              <p style="margin-top: 8px; font-size: 14px;">GitHub</p>
+            </div>
+          </div><!-- End Service Item -->
 
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-          <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
-          <div>
-            <h4 class="title"><a href="service-details.html" class="stretched-link">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur</p>
-          </div>
-        </div><!-- End Service Item -->
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
+            <div>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum</p>
+            </div>
+          </div><!-- End Service Item -->
 
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-          <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
-          <div>
-            <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum</p>
-          </div>
-        </div><!-- End Service Item -->
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
+            <div>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                praesentium voluptatum deleniti atque</p>
+            </div>
+          </div><!-- End Service Item -->
 
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-          <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
-          <div>
-            <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-              praesentium voluptatum deleniti atque</p>
-          </div>
-        </div><!-- End Service Item -->
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+            <div>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
+              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
+                soluta nobis est eligendi</p>
+            </div>
+          </div><!-- End Service Item -->
 
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-          <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
-          <div>
-            <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-              soluta nobis est eligendi</p>
-          </div>
-        </div><!-- End Service Item -->
-
-      </div>
+        </div>
 
       </div>
 
