modified the contact details form

--- a/index.html
+++ b/index.html
@@ -624,69 +624,123 @@
 
     </section><!-- /Portfolio Section -->
 
-    <!-- Services Section -->
-    <section id="services" class="services section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div style="display: flex; justify-content: center; gap: 20px;">
-            <div style="text-align: center; width: 200px;">
-              <img src="images/ado.png" alt="Azure Devops" style="width: 100px; height: auto; border-radius: 8px;">
-              <p style="margin-top: 8px; font-size: 14px;">ADO</p>
+    <!-- serviceS -->
+    <section class="services section" id="services">
+      <div class="services-section">
+        <h2 class="services-heading">services</h2>
+        <div class="services-list-container">
+          <div class="services-list">
+            <!-- service 1 -->
+            <div class="service">
+              <img src="images/airflow.png" alt="Airflow icon">
+              <div class="service-name">Airflow</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
             </div>
 
-            <div style="text-align: center; width: 200px;">
-              <img src="images/azure.png" alt="Azure Devops" style="width: 100px; height: auto; border-radius: 8px;">
-              <p style="margin-top: 8px; font-size: 14px;">Azure</p>
+            <!-- service 2 -->
+            <div class="service">
+              <img src="images/ado.png" alt="Azure DevOps icon">
+              <div class="service-name">Azure DevOps</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+
+            <!-- service 3 -->
+            <div class="service">
+              <img src="images/azure.png" alt="Azure icon">
+              <div class="service-name">Azure Services</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+
+            <!-- service 4 -->
+            <div class="service">
+              <img src="images/cicd.png" alt="CI/CD icon">
+              <div class="service-name">CI/CD</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 5 -->
+            <div class="service">
+              <img src="images/docker.png" alt="Docker icon">
+              <div class="service-name">Docker</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 6 -->
+            <div class="service">
+              <img src="images/fastapi.png" alt="FastAPI icon">
+              <div class="service-name">FastAPI</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 7 -->
+            <div class="service">
+              <img src="images/github.png" alt="GitHub icon">
+              <div class="service-name">GitHub</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 8 -->
+            <div class="service">
+              <img src="images/grafana.png" alt="Grafana icon">
+              <div class="service-name">Grafana</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 9 -->
+            <div class="service">
+              <img src="images/kubernetes.png" alt="Kubernetes icon">
+              <div class="service-name">Kubernetes</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 10 -->
+            <div class="service">
+              <img src="images/linux.png" alt="Linux icon">
+              <div class="service-name">Linux</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 11 -->
+            <div class="service">
+              <img src="images/db.png" alt="MongoDB icon">
+              <div class="service-name">MongoDB</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 12 -->
+            <div class="service">
+              <img src="images/prometheus.png" alt="Prometheus icon">
+              <div class="service-name">Prometheus</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
+            </div>
+            <!-- service 13 -->
+            <div class="service">
+              <img src="images/python.png" alt="Python icon">
+              <div class="service-name">Python</div>
+              <!-- <div class="service-bar">
+                          <span style="width: 90%;"></span>
+                      </div> -->
             </div>
           </div>
-
-
-          <div style="text-align: center; width: 200px;">
-              <img src="images/github.png" alt="GitHub" style="width: 100px; height: auto; border-radius: 8px;">
-              <p style="margin-top: 8px; font-size: 14px;">GitHub</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                praesentium voluptatum deleniti atque</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-                soluta nobis est eligendi</p>
-            </div>
-          </div><!-- End Service Item -->
-
         </div>
-
       </div>
-
-    </section><!-- /Services Section -->
+    </section> <!-- /Services Section -->
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section light-background">
