--- a/index.html
+++ b/index.html
@@ -572,10 +572,10 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
+            <img src="images/python.png" alt="Python Icon" style="width: 24px; height: 24px;">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Python</a></h4>
+              <p class="description">Python is a high-level, versatile programming language known for its readability, simplicity, and wide range of applications from web development to data science.</p>
             </div>
           </div>
           <!-- End Service Item -->
