modified the contact details form

--- a/index.html
+++ b/index.html
@@ -574,17 +574,17 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <img src="images/python.png" alt="Python Icon" style="width: 24px; height: 24px;">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Python</a></h4>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">&nbsp;Python</a></h4>
               <p class="description">Python is a high-level, versatile programming language known for its readability, simplicity, and wide range of applications from web development to data science.</p>
             </div>
           </div>
           <!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+            <img src="images/cicd.png" alt="cicd icon" style="width: 24px; height: 24px;">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">&nbsp;CICD</a></h4>
+              <p class="description">CI/CD (Continuous Integration/Continuous Deployment) automates software delivery by integrating code changes, testing them, and deploying them to production efficiently and reliably.</p>
             </div>
           </div><!-- End Service Item -->
 
