--- a/index.html
+++ b/index.html
@@ -574,8 +574,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <img src="images/python.png" alt="Python Icon" style="width: 50px; height: 50px;">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">&nbsp;Python</a></h4>
-              <p class="description">Python is a high-level, versatile programming language known for its readability, simplicity, and wide range of applications from web development to data science.</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link"><br>Python</a></h4>
             </div>
           </div>
           <!-- End Service Item -->
