modified the contact details form

--- a/index.html
+++ b/index.html
@@ -572,10 +572,8 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <img src="images/python.png" alt="Python Icon" style="width: 50px; height: 50px;">
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link"><br>Python</a></h4>
-            </div>
+            <img src="images/python.png" alt="Python Logo" style="width: 100px;">
+            <p>Python Programming Language</p>
           </div>
           <!-- End Service Item -->
 
