--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <img src="images/python.png" alt="Python Logo" style="width: 100px;">
+            <img src="images/python.png" alt="Python Logo" style="width: 100px; height: 100px;"><br>
             <p>Python Programming Language</p>
           </div>
           <!-- End Service Item -->
