modified the contact details form

--- a/index.html
+++ b/index.html
@@ -638,18 +638,15 @@
           <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/python.png" alt="Python Logo" style="width: 100px; height: 100px;">
-            <p style="margin-top: 10px;">Python Programming Language</p>
+            <p style="margin-top: 10px;">Python</p>
           </div>
 
           <!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <img src="images/cicd.png" alt="cicd icon" style="width: 50px; height: 50px;">
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">&nbsp;CICD</a></h4>
-              <p class="description">CI/CD (Continuous Integration/Continuous Deployment) automates software delivery by
-                integrating code changes, testing them, and deploying them to production efficiently and reliably.</p>
-            </div>
+          <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/cicd.png" alt="CICD Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">CICD</p>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
