--- a/index.html
+++ b/index.html
@@ -661,22 +661,28 @@
             <p style="margin-top: 10px;">GitHub</p>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                praesentium voluptatum deleniti atque</p>
-            </div>
+          <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/kubernetes.png" alt="Kubernetes Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Kubernetes</p>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-                soluta nobis est eligendi</p>
-            </div>
+          <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/linux.png" alt="linux Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Linux</p>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/db.png" alt="db Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Database</p>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/azure.png" alt="azure Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Azure</p>
           </div><!-- End Service Item -->
 
         </div>
