--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
       <div class="container">
 
-        <div class="row gy-4">
+        <div class="row gx-1">
 
           <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
