--- a/index.html
+++ b/index.html
@@ -637,6 +637,11 @@
 
           <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
+            <img src="images/selenium.png" alt="selenium Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Selenium</p>
+
+          <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
             <img src="images/python.png" alt="Python Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">Python</p>
           </div>
