--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>5 March 1989</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>https://shivatechhub.github.io/</span></li>
+                    <span>https://shivatechhub.github.io/</span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9000501030</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hyderabad,Telangana,India</span>
                   </li>
@@ -655,7 +656,7 @@
             <p style="margin-top: 10px;">Docker</p>
           </div><!-- End Service Item -->
 
-         <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/github.png" alt="GitHub Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">GitHub</p>
@@ -689,44 +690,69 @@
             data-aos-delay="100">
             <img src="images/selenium.png" alt="selenium Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">Selenium</p>
-        </div>
-        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/aws.png" alt="aws Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">Amazon Web Services</p>
-        </div>
-         <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/git.png" alt="git Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">GIT</p>
-        </div>
-        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/java.png" alt="java Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">JAVA</p>
-        </div>
-        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/pytest.png" alt="pytest Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">pytest</p>
-        </div>
-        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/maven.png" alt="maven Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">Maven</p>
-        </div>
-        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/testng.png" alt="testng Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">TestNG</p>
-        </div>
-        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
             data-aos-delay="100">
             <img src="images/jenkins.png" alt="Jenkins Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">Jenkins</p>
-        </div>
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/webdriverio.png" alt="webdriverio Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">WebdriverIO</p>
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/testcomplete.png" alt="testcomplete Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">TestComplete</p>
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/Terraform.png" alt="Terraform Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Terraform</p>
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/postman.png" alt="postman Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Postman</p>
+          </div>
+          <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/shell scripting.png" alt="shell Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Shell scripting</p>
+          </div>
 
-      </div>
+        </div>
 
     </section><!-- /Services Section -->
 
