--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="https://x.com/Shiva05031989" class="twitter"><i class="bi bi-twitter-x"></i></a>
+      <a href="https://www.youtube.com/@shivatechhub" class="youtube"><i class="bi bi-youtube"></i></a>
       <a href="https://www.facebook.com/shivachamp1210" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/shiva_krishna316/" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://www.linkedin.com/in/shiva-krishna-duppalli-453230b8/" class="linkedin"><i
