--- a/index.html
+++ b/index.html
@@ -422,10 +422,23 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-          consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-          in iste officiis commodi quidem hic quas.</p>
+        <h2>SHIVA TECHHUB</h2>
+        <p>🎬 Welcome to SHIVA TECHHUB – Your Hub for Automation & DevOps Excellence!
+
+🚀 Are you ready to supercharge your workflows and streamline your processes?
+Here at SHIVA TECHHUB, we dive deep into:
+
+Cutting-edge Automation tools like Python, Selenium, Airflow
+
+Powerful DevOps solutions like Docker, Kubernetes, CI/CD pipelines, Git, and Cloud platforms
+
+Practical, real-world examples and step-by-step tutorials to help you master complex systems
+
+Tips & tricks for building robust, scalable, and efficient infrastructures
+
+💡 Whether you're a developer, cloud engineer, DevOps enthusiast, or automation wizard, our channel will help you stay ahead of the curve.
+
+🔔 Subscribe and join us on this journey towards automating everything and optimizing your DevOps workflows!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
